feat: add new project for sending email